tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_after_param_type_trailing_extern.objc3
// Negative fixture: declaration qualifiers are not allowed after parameter type annotations.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierAfterParamTypeTrailingExtern;

fn add(lhs: i32, rhs: i32 extern) -> i32;

fn main() -> i32 {
  return 0;
}
